# web_ftp_client

./: Cargo.toml  architecture.md  run_ftp_server.py
assets/css/: iosevka.css  main.css  style.css  theme-core.css  theme-latte.css  theme-mocha.css  tiny-brutalism.css
assets/css/base/: forms.css  layout.css  reset.css  typography.css
assets/css/theme/: latte.css  variables.css
assets/js/: init.js  scheme.js  sse.js
ftp_fs/: Cargo.toml
ftp_fs/src/: error.rs  ftp.rs  lib.rs  local.rs  types.rs
ftp_test_dir/: hello.txt
src/: error.rs  filters.rs  helpers.rs  main.rs  routes.rs  state.rs  templates.rs
templates/: base.html  files_table.html  footer.html  index.html  local_files_table.html
web/: Cargo.toml
web/assets/css/: main.css  theme-core.css
web/assets/css/base/: layout.css
web/assets/css/theme/: mocha.css
web/src/: helpers.rs  main.rs  routes.rs
web/templates/: base.html  index.html
