[package]
name = "web_ftp_client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = "0.7.2"
askama = "0.12"
tokio = { version = "1", features = ["full", "tracing"] }
log = "0.4.24"
tower-http = { version = "0.6.6", features = ["fs"] }
suppaftp = { version = "7.0.5", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
axum-macros = "0.5.0"
