[workspace]
members = ["ftp_fs", "web"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
suppaftp = { version = "7.0.5", features = ["tokio"] }
futures-util = "0.3.31"
thiserror = "2"
async-trait = "0.1"
log = "0.4.24"
