[package]
name = "web_ftp_client"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["ftp_fs"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
suppaftp = { version = "7.0.5", features = ["tokio"] }
futures-util = "0.3.31"
thiserror = "2"
async-trait = "0.1"
log = "0.4.24"

[dependencies]
ftp_fs = { path = "ftp_fs" }
axum = "0.7"
axum-server = "0.7.2"
axum-macros = "0.5.0"
axum-extra = { version = "0.9", features = ["form"] }
askama = "0.12"
tower-http = { version = "0.6.6", features = ["fs", "compression-full"] }
tokio = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio-stream = "0.1.17"
