[package]
name = "ftp_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
suppaftp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tokio-stream = "0.1.17"
